[package]
name = "extreme_bevy"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = "0.13.2"
bevy_asset_loader = "0.20.1"
bevy_ggrs = { version = "0.15.0", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.9.0", features = ["ggrs"] }
ggrs = "0.10.2"
